--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,12 @@
+:root {
+    --bg: #0d0c22;
+    --bgSoft: #2d2b42;
+    --text: white;
+    --textsoft: #e5e5e5;
+    --btn: #3673fd;
+}
+
+
 *{
     margin: 0;
     padding:0;
@@ -6,4 +15,11 @@
 
 body{
     background-image: linear-gradient(rgba(0,8,51,0.9), rgba(0,8,51,0.9)), url('/wallpaper.jpg');
+    color: var(--text);
 }
+
+a{
+    text-decoration: none;
+    color:inherit;
+}
+
