--- a/src/components/navbar/links/links.module.css
+++ b/src/components/navbar/links/links.module.css
@@ -11,6 +11,9 @@
 }
 
 
+/* after certain display-size, the navbar will dissapear and a button for smaller devices 
+will open a vertical menu with the tabs */
+
 .mobileLinks, .menuButton{
     display: none;
 }
@@ -19,7 +22,23 @@
     .links{
         display: none;
     }
+    .menuButton{
+        display: block;
+        cursor: pointer;
+        
+    }
+    .mobileLinks{
+    position: absolute;
+    top: 100px;
+    right: 0;
+    width: 50%;
+    height: calc(100vh - 100px);
+    background-color: rgba(0,8,51,0.95);
+    display: flex;
+    flex-direction:column;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    }
 }
 
-/* 
-need to add a drop button for when platform gets smaller */
