trying to get userProfiles slugs

--- a/src/app/profiles/[slug]/userProfile.module.css
+++ b/src/app/profiles/[slug]/userProfile.module.css
@@ -2,3 +2,54 @@
     display: flex;
     gap: 100px;
 }
+
+.pfpContainer{
+flex:1;
+position: relative;
+height: calc(100vh - 200px);
+}
+
+.pfp{
+object-fit: cover;
+}
+
+.textContainer{
+flex: 2;
+display: flex;
+flex-direction: column;
+gap: 50px;
+}
+
+.title{
+font-size: 64px;
+}
+
+.detail{
+display: flex;
+gap: 20px;
+}
+
+.detailText{
+gap: 10px;
+display: flex;
+flex-direction: column;
+}
+
+.detailTitle{
+color: gray;
+font-weight: bold;
+}
+
+.detailValue{
+font-weight: 500;
+}
+
+.content{
+font-size: 20px;
+}
+
+@media (max-width: 768px){
+.imgContainer{
+    display: none;
+}
+}
