Profile button now redirects to a profile

--- a/src/app/profiles/[slug]/userProfile.module.css
+++ b/src/app/profiles/[slug]/userProfile.module.css
@@ -3,13 +3,13 @@
     gap: 100px;
 }
 
-.pfpContainer{
+.imgContainer{
 flex:1;
 position: relative;
 height: calc(100vh - 200px);
 }
 
-.pfp{
+.img{
 object-fit: cover;
 }
 
