--- a/src/components/navbar/links/links.module.css
+++ b/src/components/navbar/links/links.module.css
@@ -1,79 +1,76 @@
-.links{
+.links {
     display: flex;
     align-items: center;
     gap: 10px;
-}
-
-.logout{
+  }
+  
+  .logout {
     padding: 10px;
     cursor: pointer;
     font-weight: bold;
-}
-
-.avatarBtn{
+  }
+  
+  .avatarContainer {
+    position: relative; /* Make this container relative */
+  }
+  
+  .avatarBtn {
     object-fit: cover;
     border-radius: 50%;
     cursor: pointer;
-}
-
-
-.avatarLinks{
+  }
+  
+  .avatarLinks {
+    position: absolute; /* Position it absolutely within the container */
+    right: 0; /* Align it to the right edge of the container */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     min-width: 100px;
+    height: 150px;
     padding: 10px;
     border-radius: 20px;
     font-weight: 500;
     text-align: center;
-
-    
-    position: absolute;
     z-index: 2;
-    top: 100px;
-    right: 9vw;
-    width: 10%;
-    height: 150px;
-    background-color: rgba(0,8,51,0.95);
-    display: flex;
-    flex-direction:column;
-    align-items: center;
-    justify-content: center;
+    top: 60px; /* Adjust this value if needed to align below the avatar button */
+    background-color: rgba(0, 8, 51, 0.95);
     gap: 10px;
-}
-
-
-
-/* after certain display-size, the navbar will dissapear and a button for smaller devices 
-will open a vertical menu with the tabs */
-
-.mobileLinks, .menuButton{
+  }
+  
+  /* After certain display-size, the navbar will disappear and a button for smaller devices 
+  will open a vertical menu with the tabs */
+  
+  .mobileLinks,
+  .menuButton {
     display: none;
     cursor: pointer;
-}
-
-@media (max-width: 768px) {
-    .links{
-        display: none;
+  }
+  
+  @media (max-width: 768px) {
+    .links {
+      display: none;
     }
-    .avatarLinks{
-        display: none;
+    .avatarLinks {
+      display: none;
     }
-    .menuButton{
-        display: block;
-        cursor: pointer;
-      
+    .menuButton {
+      display: block;
+      cursor: pointer;
     }
-    .mobileLinks{
-    z-index: 2;
-    position: absolute;
-    top: 100px;
-    right: 0;
-    width: 50%;
-    height: calc(100vh - 100px);
-    background-color: rgba(0,8,51,0.95);
-    display: flex;
-    flex-direction:column;
-    align-items: center;
-    justify-content: center;
-    gap: 10px;
+    .mobileLinks {
+      z-index: 2;
+      position: absolute;
+      top: 100px;
+      right: 0;
+      width: 50%;
+      height: calc(100vh - 100px);
+      background-color: rgba(0, 8, 51, 0.95);
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      gap: 10px;
     }
-}
-
+  }
