--- a/src/app/profiles/usersPage.module.css
+++ b/src/app/profiles/usersPage.module.css
@@ -1,22 +1,21 @@
-.container{
+.usersPage {
     display: flex;
     flex-wrap: wrap;
-    gap: 20px;  
+    gap: 20px;
 }
 
-.profile{
-    width: 30%
+.profile {
+    width: 90%;
 }
 
-@media screen and (max-width: 1280px){
-    .profile{
+@media screen and (max-width: 1280px) {
+    .profile {
         width: 45%;
     }
 }
 
-@media screen and (max-width: 768px){
-    .profile{
-        width: 100%;
+@media screen and (max-width: 768px) {
+    .profile {
+        width: 90%;
     }
-};
-    
+}
