--- a/src/components/profileCard/profileCard.module.css
+++ b/src/components/profileCard/profileCard.module.css
@@ -1,38 +1,46 @@
-.container{
+.container {
     display: flex;
-    flex-direction: column;
+    align-items: center;
     gap: 20px;
     margin-bottom: 20px;
 }
 
-.top{
-    display: flex;
-}
-
-.imgContainer{
-    width: 90%;
-    height: 400px;
+.imgContainer {
+    width: 150px;
+    height: 150px;
     position: relative;
+    border-radius: 50%;
+    overflow: hidden;
 }
 
-.img{
+.img {
     object-fit: cover;
 }
 
-
-.title{
-    font-size: 24px;
-    margin-bottom: 20px;
-    width: 90%;
+.infoContainer {
+    display: flex;
+    flex-direction: column;
 }
 
-.desc{
-    width: 90%;
+.username {
+    font-size: 30px;
     margin-bottom: 20px;
-    font-weight: 300;
-    color: gray;
 }
 
-.link{
-    text-decoration: underline; 
+.link {
+    text-decoration: underline;
+}
+
+
+@media screen and (max-width: 1280px) {
+    .container {
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .container {
+        flex-direction: column;
+    }
 }
