--- a/src/app/profiles/[slug]/userProfile.module.css
+++ b/src/app/profiles/[slug]/userProfile.module.css
@@ -1,55 +1,117 @@
-.container{
+.container {
     display: flex;
-    gap: 100px;
+    flex-direction: column;
+    gap: 50px; 
 }
 
-.imgContainer{
-flex:1;
-position: relative;
-height: calc(100vh - 200px);
+
+
+.topContainer {
+    display: flex;
+    align-items: flex-start;
+    gap: 100px; 
 }
 
-.img{
-object-fit: cover;
+
+.imgBtnContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center; 
 }
 
-.textContainer{
-flex: 2;
-display: flex;
-flex-direction: column;
-gap: 50px;
+.imgContainer {
+    width: 400px;
+    position: relative;
+    height: 400px;
 }
 
-.title{
-font-size: 64px;
+.img {
+    object-fit: cover;
 }
 
-.detail{
-display: flex;
-gap: 20px;
+.changeImageButton {
+    margin-top: 10px; 
+    padding: 10px 20px; 
+    font-size: 16px; 
+    cursor: pointer; 
+    background-color: var(--btn);
+    color: var(--textColor);
+    font-weight: bold;
+    border: none;
+    border-radius: 5px;
 }
 
-.detailText{
-gap: 10px;
-display: flex;
-flex-direction: column;
+
+.textContainer {
+    display: flex;
+    flex-direction: column;
+    flex: 2; 
 }
 
-.detailTitle{
-color: gray;
-font-weight: bold;
+.username {
+    font-size: 64px;
 }
 
-.detailValue{
-font-weight: 500;
+.detailText {
+    gap: 10px; /* Maintain existing gap */
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 20px; /* Add margin bottom for spacing */
 }
 
-.content{
-font-size: 20px;
+.detailTitle {
+    color: gray;
+    font-weight: bold;
 }
 
-@media (max-width: 768px){
-.imgContainer{
-    display: none;
+.detailValue {
+    font-weight: 500;
 }
+
+.bioContainer{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.bio {
+    align-items: center;
+    width: 100%;
+    height: 250px;
+    background-color:rgba(0,8,51,0.5) ;
+    font-size: 20px;
+}
+
+.changeBioButton{
+    margin-top: 10px; 
+    padding: 10px 20px; 
+    font-size: 16px; 
+    cursor: pointer; 
+    background-color: var(--btn);
+    color: var(--textColor);
+    font-weight: bold;
+    border: none;
+    border-radius: 5px;
+}
+
+
+
+.bottomContainer {
+    display: flex;
+    width: 100%; 
+    min-height: 500px; /* Ensure a minimum height */
+}
+
+.officialTab {
+    flex: 1;
+}
+
+.statsTab {
+    flex: 2;
+}
+
+@media (max-width: 768px) {
+    .imgBtnContainer {
+        display: none;
+    }
 }
