--- a/src/components/wheel/WheelComponent.module.css
+++ b/src/components/wheel/WheelComponent.module.css
@@ -1,42 +1,36 @@
-.container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 20px;
-}
-
-.wheel {
-    width: 300px; /* Adjust as needed */
-    height: 300px; /* Adjust as needed */
-    border: 2px solid #333;
-    border-radius: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    overflow: hidden;
-    position: relative;
-}
-
-.item {
-    position: absolute;
-    width: 100%;
-    text-align: center;
-    font-size: 16px;
-    transform-origin: center center;
-}
-
-.spinButton,
-.addButton {
-    padding: 10px 20px;
-    font-size: 16px;
-    cursor: pointer;
-    background-color: #007bff;
-    color: white;
+.spinBtn{
+    margin-top: 10px; 
+    padding: 10px 20px; 
+    font-size: 16px; 
+    cursor: pointer; 
+    background-color: var(--btn);
+    color: var(--textColor);
+    font-weight: bold;
     border: none;
     border-radius: 5px;
 }
 
-.addButton {
-    background-color: #28a745;
-    margin-top: 20px;
+.getAnimeBtn{
+    margin-top: 10px; 
+    padding: 10px 20px; 
+    font-size: 16px; 
+    cursor: pointer; 
+    background-color: #d90429;
+    color: var(--textColor);
+    font-weight: bold;
+    border: none;
+    border-radius: 5px;
+}
+
+
+.btnContainer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.wheelContainer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
